--- a/site/src/main.css
+++ b/site/src/main.css
@@ -204,6 +204,10 @@ input {
   box-shadow: inset 3px 3px 3px #261d11;
   border-radius: 4px;
   line-height: 1em;
+  ::placeholder {
+    color: var(--orange);
+    opacity: 0.65;
+  }
 }
 
 .dark-mode input {
