--- a/site/src/main.css
+++ b/site/src/main.css
@@ -11,19 +11,18 @@
   --yellow: #ffff00;
   --red: #ff0000;
   --green: #0dc10d;
-
   --rsbackground: url(/ui/297-0.png);
   --rsbackground-dark: url(/ui/297-0-dark.png);
 }
 
 /* Customize website's scrollbar like Mac OS
 Not supports in Firefox and IE */
-body {
+html {
   scrollbar-gutter: stable;
 }
 
 /* total width */
-body::-webkit-scrollbar {
+html::-webkit-scrollbar {
   background-color: #00000080;
   width: 8px;
   height: 8px;
@@ -31,30 +30,30 @@ body::-webkit-scrollbar {
 }
 
 /* background of the scrollbar except button or resizer */
-.scrollbar::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
   background-color: #00000080;
 }
 
 /* scrollbar itself */
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   background-color: #00000080;
   border-radius:16px;
   border:0px solid #FFFFFF80;
 }
 
 /* set button(top and bottom of the scrollbar) */
-body::-webkit-scrollbar-button {
+html::-webkit-scrollbar-button {
   display:none;
 }
 
 /* scrollbar when element is hovered */
-body:hover::-webkit-scrollbar-thumb {
+html:hover::-webkit-scrollbar-thumb {
   background-color: #00000080;
   border: 4px solid #FFFFFF80;
 }
 
 /* scrollbar when scrollbar is hovered */
-body::-webkit-scrollbar-thumb:hover {
+html::-webkit-scrollbar-thumb:hover {
     background-color:#00000080;
     border:4px solid #FFFFFF80
 }
