--- a/site/src/main.css
+++ b/site/src/main.css
@@ -17,12 +17,12 @@
 
 /* Customize website's scrollbar like Mac OS
 Not supports in Firefox and IE */
-html {
+* {
   scrollbar-gutter: stable;
 }
 
 /* total width */
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
   background-color: #00000080;
   width: 8px;
   height: 8px;
@@ -30,30 +30,30 @@ html::-webkit-scrollbar {
 }
 
 /* background of the scrollbar except button or resizer */
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: #00000080;
 }
 
 /* scrollbar itself */
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #00000080;
   border-radius:16px;
   border:0px solid #FFFFFF80;
 }
 
 /* set button(top and bottom of the scrollbar) */
-html::-webkit-scrollbar-button {
+*::-webkit-scrollbar-button {
   display:none;
 }
 
 /* scrollbar when element is hovered */
-html:hover::-webkit-scrollbar-thumb {
+*:hover::-webkit-scrollbar-thumb {
   background-color: #00000080;
   border: 4px solid #FFFFFF80;
 }
 
 /* scrollbar when scrollbar is hovered */
-html::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
     background-color:#00000080;
     border:4px solid #FFFFFF80
 }
