--- a/site/src/main.css
+++ b/site/src/main.css
@@ -197,6 +197,12 @@ input[type="radio"] {
   display: none;
 }
 
+
+.draggable-member-list input[type="checkbox"] {
+  display: inline-block !important;
+  margin-right: 8px;
+}
+
 input[type="checkbox"] + label,
 input[type="radio"] + label {
   display: flex;
