--- a/site/src/player-stats/player-stats.css
+++ b/site/src/player-stats/player-stats.css
@@ -43,10 +43,10 @@ player-stats {
 }
 
 player-stats player-interacting {
-  height: 45%;
-  width: 40%;
+  height: 50%;
+  width: 70%;
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -10%);
+  left: 25%;
+  opacity: 0.75;
 }
